--- a/src/main/java/Vistas/OperacionesContinente.form
+++ b/src/main/java/Vistas/OperacionesContinente.form
@@ -106,6 +106,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="A&#xf1;adir Continente"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnA&#xf1;adirContinenteActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -118,6 +121,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="CERRAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCerrarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
